mi primera confirmación de actualización

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                     </form>
                 </div>
             </section>
+            <div class="greeting"></div>
         </main>
         <footer id="redes-sociales">
             <div id="footer">
