--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="navli" href="#seccion-principal">Acerca de mí</a></li>
                     <li><a href="navli" href="#trabajos">Trabajos</a></li>
                     <li><a href="navli" href="#">Servicios</a></li>
-                    <li><a href="navli" href="#trabajos">Contacto</a></li>
+                    <li><a href="navli" href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
         </header>
