--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                     <i class="fa-solid fa-bars"></i>
                 </label>
                 <ul class="menu">
-                    <li><a href="navli" href="#">Inicio</a></li>
-                    <li><a href="navli" href="#seccion-principal">Acerca de mí</a></li>
-                    <li><a href="navli" href="#trabajos">Trabajos</a></li>
-                    <li><a href="navli" href="#">Servicios</a></li>
-                    <li><a href="navli" href="#contacto">Contacto</a></li>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#seccion-principal">Acerca de mí</a></li>
+                    <li><a href="#trabajos">Trabajos</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
         </header>
