--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#seccion-principal">Acerca de mí</a></li>
                     <li><a href="#trabajos">Trabajos</a></li>
-                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#servicios">Servicios</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
