--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </nav>
             </div>
         </footer>
-        <a id="fixed" target="_blank" href="https://www.youtube.com/"><i class="fa-solid fa-paw"></i></a>
+        <a id="fixed" target="_blank" href="https://www.riotgames.com/es"><i class="fa-solid fa-paw"></i></a>
     </div>
 </body>
 </html>
