--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
                 <nav>
                     <ul>
                         <li>
-                            <a target="_blank" href="https://www.instagram.com/"><i class="fa-solid fa-paw"></i>Instagram</a>
+                            <a target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://web.facebook.com/?_rdc=1&_rdr"><i class="fa-solid fa-paw"></i>Facebook</a>
+                            <a target="_blank" href="https://web.facebook.com/?_rdc=1&_rdr"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.whatsapp.com/?lang=es_LA"><i class="fa-solid fa-paw"></i>Whatsapp</a>
+                            <a target="_blank" href="https://www.whatsapp.com/?lang=es_LA"><i class="fa-brands fa-whatsapp" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </nav>
