--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@
                         volleyball, soy amante de los perritos y me encanta la CocaCola.</p>
                 </div>
                 <div class="acerca-imagen">
-                    <img src="img/Mel 2.jpg" alt="imagen portada">
+                    <img src="img/MBAR_026_Ahri.jpg" alt="imagen portada">
                 </div>
             </section>
             <section class="seccion-2">
-                <img src="img/Mel y Kira.jpg" alt="Imagen de carrusel">
+                <img src="img/KDA_Header-1.jpg" alt="Imagen de carrusel">
             </section>
             <section id="trabajos" class="trabajo-container">
                 <h3 class="title-section">Trabajos</h3>
                 <div class="trabajos">
                     <div class="trabajo-item">
-                        <img src="img/A.jpg" alt="imagen A"/>
-                        <h2>Título 1</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ut nostrum. Similique laborum odit earum sint, aliquid deleniti? Quasi animi nobis mollitia voluptatem quod minus est ea cum quos blanditiis.</p>
-                        <a href="#">Leer más</a>
+                        <img src="img/MBVD_033_Akali_MobileWallpaper (1).png" alt="imagen A"/>
+                        <h2>Akali</h2>
+                        <p>Tras abandonar la orden de los Kinkou y su título de Puño de la Sombra, Akali actúa ahora en solitario y está lista para convertirse en el arma mortal que necesita su gente. Aunque no renuncia a las enseñanzas de Shen, su maestro, ha jurado defender Jonia de sus enemigos, asesinándolos uno a uno. Los ataques de Akali son silenciosos, pero su mensaje se escucha con toda claridad: temed a la asesina sin maestro.</p>
+                        <a href="https://www.leagueoflegends.com/es-mx/">Leer más</a>
                     </div>
                     <div class="trabajo-item">
-                        <img src="img/B.jpg" alt="imagen B"/>
-                        <h2>Título 2</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ut nostrum. Similique laborum odit earum sint, aliquid deleniti? Quasi animi nobis mollitia voluptatem quod minus est ea cum quos blanditiis.</p>
-                        <a href="#">Leer más</a>
+                        <img src="img/MBVD_030_Ahri_MobileWallpaper.png" alt="imagen B"/>
+                        <h2>Ahri</h2>
+                        <p>Ahri es una raposa vastaya conectada de forma innata a la magia del reino de los espíritus. Es capaz de manipular las emociones de su presa antes de consumir su esencia, proceso que le transmite los recuerdos de cada alma que consume. Otrora una poderosa pero incontrolable depredadora, Ahri ahora viaja por el mundo en busca de vestigios de sus antepasados mientras intenta reemplazar los recuerdos robados por otros propios.</p>
+                        <a href="https://www.leagueoflegends.com/es-mx/">Leer más</a>
                     </div>
                     <div class="trabajo-item">
-                        <img src="img/C.jpg" alt="imagen C"/>
-                        <h2>Título 3</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ut nostrum. Similique laborum odit earum sint, aliquid deleniti? Quasi animi nobis mollitia voluptatem quod minus est ea cum quos blanditiis.</p>
-                        <a href="#">Leer más</a>
+                        <img src="img/MBVD_018a_Kaisa_MobileWallpaper_Clean_LoL_9x16_2020_09_25_FINAL.png" alt="imagen C"/>
+                        <h2>Kaisa</h2>
+                        <p>Reclamada por el Vacío cuando era solo una niña, Kai'Sa logró sobrevivir por pura tenacidad y fuerza de voluntad. Sus experiencias la han convertido en una cazadora letal y, para algunos, el presagio de un futuro que preferirían no vivir para ver. Ahora que ha entrado en una tensa simbiosis con un caparazón viviente del Vacío, pronto llegará el momento de decidir si perdona a aquellos mortales que la llaman monstruo y se alía con ellos para tratar de derrotar a la oscuridad que se avecina... o simplemente deja que su mente olvide y que el Vacío consuma el mundo que la abandonó.</p>
+                        <a href="https://www.leagueoflegends.com/es-mx/">Leer más</a>
                     </div>
                 </div>
             </section>
